# parsanol-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  PR_LAZY_SLICES.md  README.adoc  README.md  SECURITY.md  deny.toml  release-plz.toml  typos.toml
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: benchmarks-index.html  docs-index.html  extract_benchmarks.py
.github/workflows/: _rust-build-test.yml  _rust-setup.yml  auto-merge.yml  ci.yml  docs.yml  release-binary.yml  release.yml  ruby-ffi.yml  version-bump.yml  wasm.yml
benches/: BACKEND_PERFORMANCE.md  all-examples.rs  backend-comparison.rs  bytecode.rs  comparison.rs  libraries.rs
benches/data/: medium.json
crates/parsanol-ruby-derive/: Cargo.toml  README.md
crates/parsanol-ruby-derive/src/: lib.rs
docs/: ARCHITECTURE.md  BACKEND_GUIDE.md  CONTINUATION_PLAN.md  MIGRATION.md  RUBY_EXAMPLES_PLAN.md
docs/research/: incremental-parsing.md  streaming-parser.md
examples/: SPEC.md  balanced_parens.rs  calculator_transform.rs  csv_transform.rs  email_parser.rs  erb_parser.rs  error_reporting.rs  expression_evaluator.rs  json_transform.rs  markup_parser.rs  sexp_parser.rs  simple_xml.rs
examples/balanced-parens/: basic.rs.md  example.json
examples/boolean-algebra/: basic.rs  basic.rs.md  example.json
examples/calculator/: example.json  pattern.rs  pattern.rs.md  transform.rs.md
examples/captures/: basic.rs  basic.rs.md  example.json
examples/comments/: basic.rs  basic.rs.md  example.json
examples/csv/: example.json  pattern.rs  pattern.rs.md  transform.rs.md
examples/custom-atoms/: basic.rs  basic.rs.md  example.json
examples/deepest-errors/: basic.rs  basic.rs.md  example.json
examples/dynamic/: basic.rs  basic.rs.md  example.json
examples/email/: basic.rs.md  example.json
examples/erb/: basic.rs.md  example.json
examples/error-recovery/: basic.rs  basic.rs.md  example.json
examples/error-reporting/: basic.rs.md  example.json
examples/expression-evaluator/: basic.rs.md  example.json
examples/incremental/: basic.rs  basic.rs.md  example.json
examples/ini/: basic.rs  basic.rs.md  example.json
examples/ip-address/: basic.rs  basic.rs.md  example.json
examples/iso-6709/: basic.rs  basic.rs.md  example.json
examples/iso-8601/: basic.rs  basic.rs.md  example.json
examples/json/: example.json  pattern.rs  pattern.rs.md  transform.rs  transform.rs.md
examples/linter/: basic.rs  basic.rs.md  example.json
examples/markdown/: basic.rs  basic.rs.md  example.json
examples/markup/: basic.rs.md  example.json
examples/minilisp/: basic.rs  basic.rs.md  example.json
examples/modularity/: basic.rs  basic.rs.md  example.json
examples/nested-errors/: basic.rs  basic.rs.md  example.json
examples/prec-calc/: basic.rs  basic.rs.md  example.json
examples/scopes/: basic.rs  basic.rs.md  example.json
examples/sentence/: basic.rs  basic.rs.md  example.json
examples/sexp/: basic.rs.md  example.json
examples/simple-xml/: basic.rs.md  example.json
examples/streaming/: basic.rs  basic.rs.md  example.json
examples/streaming-captures/: basic.rs  basic.rs.md  example.json
examples/string-literal/: basic.rs  basic.rs.md  example.json
examples/toml/: basic.rs  basic.rs.md  example.json
examples/url/: basic.rs  basic.rs.md  example.json
examples/yaml/: basic.rs  basic.rs.md  example.json
old-docs/: CAPTURE_SCOPE_DYNAMIC_DESIGN.md  bytecode-vm-design.md  continuation-prompt.md  refactoring-plan.md
parsanol/: CHANGELOG.md  Cargo.toml
parsanol-derive/: CHANGELOG.md  Cargo.toml  README.md
parsanol-derive/src/: from_ast.rs  lib.rs
parsanol-derive/tests/: from_ast_tests.rs
parsanol/src/: derive.rs  generic_lexer.rs  lib.rs  prelude.rs  wasm.rs
parsanol/src/ffi/: mod.rs  shared.rs
parsanol/src/ffi/ruby/: cache.rs  dynamic.rs  init.rs  mod.rs  normalize.rs  parser.rs  transform.rs
parsanol/src/ffi/wasm/: mod.rs
parsanol/src/portable/: arena.rs  ast.rs  cache.rs  capture_state.rs  char_class.rs  custom.rs  debug.rs  dynamic.rs  error.rs  grammar.rs  grammar_analysis.rs  infix.rs  mod.rs  parallel.rs  parser.rs  parser_dsl.rs  parslet_transform.rs  source_location.rs  source_map.rs  streaming.rs  streaming_builder.rs  transform.rs  visitor.rs
parsanol/src/portable/backend/: analysis.rs  bytecode.rs  mod.rs  packrat.rs  traits.rs
parsanol/src/portable/bytecode/: backend.rs  capture.rs  compiler.rs  error.rs  instruction.rs  mod.rs  optimizer.rs  pattern_analysis.rs  program.rs  vm.rs
parsanol/src/portable/bytecode/backend/tests/: basic.rs  capture_scope_dynamic.rs  captures.rs  complex.rs  mod.rs  parity.rs
parsanol/src/portable/bytecode/optimizer/: tests.rs
parsanol/src/portable/parser/: config.rs  context.rs  governor.rs  mod.rs  simd.rs  tests.rs
parsanol/src/portable/parser_dsl/: tests.rs
parsanol/src/portable/transform/: direct.rs  helpers.rs  mod.rs  pattern.rs  transform.rs  value.rs
src/: derive.rs  lib.rs  prelude.rs  wasm.rs
src/portable/: arena.rs  ast.rs  c_ffi.rs  cache.rs  char_class.rs  custom.rs  debug.rs  error.rs  ffi.rs  grammar.rs  grammar_analysis.rs  incremental.rs  infix.rs  mod.rs  parser.rs  parser_dsl.rs  parslet_transform.rs  plugin.rs  regex_cache.rs  source_location.rs  source_map.rs  streaming.rs  streaming_builder.rs  transform.rs  visitor.rs
src/ruby_ffi/: builder.rs  init.rs  lexer.rs  mod.rs  parser.rs  traits.rs
tests/: error_integration.rs  example_tests.rs  incremental_integration.rs  infix_integration.rs  lexer_integration.rs  parser_integration.rs  parser_streaming_equivalence.rs  property_tests.proptest-regressions  property_tests.rs  ruby_ffi.rs  streaming_integration.rs  transform_integration.rs  wasm_ffi.rs
