[workspace]
resolver = "2"
members = [
    "parsanol",
    "parsanol-derive",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Ribose Inc. <open.source@ribose.com>"]
license = "MIT"
repository = "https://github.com/parsanol/parsanol-rs"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
hashbrown = "0.16"
ahash = "0.8"
memchr = "2.7"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = "s"
