[package]
name = "parsanol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "High-performance PEG parser library with packrat memoization and arena allocation"
documentation = "https://docs.rs/parsanol"
homepage = "https://github.com/parsanol/parsanol-rs"
rust-version = "1.86"

[package.metadata.cargo-machete]
# These optional dependencies are only used when specific features are enabled.
ignored = ["winnow"]

[lib]
crate-type = ["rlib"]

[features]
default = []
ruby = ["magnus", "rb-sys"]
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]
logging = ["log"]
parallel = ["rayon"]
# Benchmark comparison features
compare-nom = ["nom"]
compare-winnow = ["winnow"]
# Strict backend parity checking (causes tests to fail on mismatches)
strict_parity = []

[dependencies]
# Derive macros (required)
parsanol-derive = { path = "../parsanol-derive", version = "0.4.0" }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
hashbrown = { workspace = true }
ahash = { workspace = true }
memchr = { workspace = true }

# Optional dependencies
log = { version = "0.4", optional = true }
nom = { version = "8", optional = true }
winnow = { version = "0.7", optional = true }
magnus = { version = "0.8.2", optional = true }
rayon = { version = "1.10", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.4"

[build-dependencies]
rb-sys = { version = "0.9", optional = true }

# Examples
[[example]]
name = "balanced-parens"
path = "../examples/balanced-parens/basic.rs"

[[example]]
name = "boolean-algebra"
path = "../examples/boolean-algebra/basic.rs"

[[example]]
name = "calculator-pattern"
path = "../examples/calculator/pattern.rs"

[[example]]
name = "calculator-transform"
path = "../examples/calculator/transform.rs"

[[example]]
name = "comments"
path = "../examples/comments/basic.rs"

[[example]]
name = "csv-pattern"
path = "../examples/csv/pattern.rs"

[[example]]
name = "csv-transform"
path = "../examples/csv/transform.rs"

[[example]]
name = "email"
path = "../examples/email/basic.rs"

[[example]]
name = "erb"
path = "../examples/erb/basic.rs"

[[example]]
name = "error-reporting"
path = "../examples/error-reporting/basic.rs"

[[example]]
name = "error-recovery"
path = "../examples/error-recovery/basic.rs"

[[example]]
name = "expression-evaluator"
path = "../examples/expression-evaluator/basic.rs"

[[example]]
name = "incremental"
path = "../examples/incremental/basic.rs"

[[example]]
name = "ini"
path = "../examples/ini/basic.rs"

[[example]]
name = "ip-address"
path = "../examples/ip-address/basic.rs"

[[example]]
name = "iso-8601"
path = "../examples/iso-8601/basic.rs"

[[example]]
name = "iso-6709"
path = "../examples/iso-6709/basic.rs"

[[example]]
name = "json-pattern"
path = "../examples/json/pattern.rs"

[[example]]
name = "json-transform"
path = "../examples/json/transform.rs"

[[example]]
name = "markdown"
path = "../examples/markdown/basic.rs"

[[example]]
name = "markup"
path = "../examples/markup/basic.rs"

[[example]]
name = "minilisp"
path = "../examples/minilisp/basic.rs"

[[example]]
name = "modularity"
path = "../examples/modularity/basic.rs"

[[example]]
name = "deepest-errors"
path = "../examples/deepest-errors/basic.rs"

[[example]]
name = "nested-errors"
path = "../examples/nested-errors/basic.rs"

[[example]]
name = "prec-calc"
path = "../examples/prec-calc/basic.rs"

[[example]]
name = "sentence"
path = "../examples/sentence/basic.rs"

[[example]]
name = "sexp"
path = "../examples/sexp/basic.rs"

[[example]]
name = "simple-xml"
path = "../examples/simple-xml/basic.rs"

[[example]]
name = "streaming"
path = "../examples/streaming/basic.rs"

[[example]]
name = "string-literal"
path = "../examples/string-literal/basic.rs"

[[example]]
name = "toml"
path = "../examples/toml/basic.rs"

[[example]]
name = "url"
path = "../examples/url/basic.rs"

[[example]]
name = "yaml"
path = "../examples/yaml/basic.rs"

[[example]]
name = "linter"
path = "../examples/linter/basic.rs"

[[example]]
name = "custom-atoms"
path = "../examples/custom-atoms/basic.rs"

# New 0.3.0 feature examples
[[example]]
name = "captures"
path = "../examples/captures/basic.rs"

[[example]]
name = "scopes"
path = "../examples/scopes/basic.rs"

[[example]]
name = "dynamic"
path = "../examples/dynamic/basic.rs"

[[example]]
name = "streaming-captures"
path = "../examples/streaming-captures/basic.rs"

# Benchmarks
[[bench]]
name = "comparison"
path = "../benches/comparison.rs"
harness = false

[[bench]]
name = "libraries"
path = "../benches/libraries.rs"
harness = false

[[bench]]
name = "backend-comparison"
path = "../benches/backend-comparison.rs"
harness = false

[[bench]]
name = "all-examples"
path = "../benches/all-examples.rs"
harness = false
